# dramaproducer

./: .dccache  .env  .gitignore  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.devcontainer/: devcontainer.json
src/: app.py  auth.py  constants.py  decorators.py  forms.py  models.py  requirements.txt  serverless.yml  utils.py
src/templates/: 401.html  404.html  500.html  admin.html  attendance.html  base.html  checkin.html  event_create.html  event_details.html  event_edit.html  event_list.html  index.html  logout.html  production_create.html  production_details.html  production_edit.html  production_list.html  registration_cancelled.html  registration_create.html  registration_details.html  registration_edit.html  registration_success.html  roster.html  search_no_results.html  search_registration.html  success.html  team_details.html  team_list.html  team_registration.html  team_registration_success.html
